<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="71dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/lnr2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="83dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/edSignUpLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/hint_last_name"
                android:inputType="text"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edSignUpFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/hint_first_name"
                android:inputType="text"
                android:textColor="@color/colorBlack" />
            <!--
        <EditText
            android:id="@+id/edSignUpPays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/hint_pays"
            android:inputType="text"
            android:textColor="@color/colorBlack" /> -->


            <EditText
                android:id="@+id/edSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edSignUpPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:textColor="@color/colorBlack" />

            <!--        android:text="Doe"-->
            <!--        android:text="John"-->
            <!--        android:text="America"-->
            <!--        android:text="john.doe@esprit.tn"-->
            <!--        android:text="password"-->
            <!--        android:text="99112233"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_signUp"
                    android:layout_width="137dp"
                    android:layout_height="33dp"
                    android:layout_margin="30dp"
                    android:background="@color/colorRed"
                    android:text="@string/btnSignUp"
                    android:textColor="@color/colorTextWhite" />

                <Button
                    android:id="@+id/btn_signUpCancel"
                    android:layout_width="135dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/colorRed"
                    android:text="@string/btnSignUpCancel"
                    android:textColor="@color/colorTextWhite" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>